[package]
name = "advisory-lock"
version = "0.1.0"
authors = ["topecongiro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["errhandlingapi", "fileapi", "minwinbase", "winerror"]

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"